--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<head>
+  <style>
+    body {
+      font: sans-serif;
+    }
+  </style>
+</head>
 <body>
   <div style="font-size: 100px;">JasonTB.com</div>
   <div style="font-size: 30px;">My spring store</div>
