--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
   <div style="font-size: 30px;">123</div>
   <div style="font-size: 30px;">123</div>
   <div style="font-size: 30px;">123</div>
-  <div style="font-size: 30px;">123</div>
+  <div style="font-size: 30px;"><a href="page.html">123</a></div>
 </body>
