--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div style="font-size: 100px;">JasonTB.com</div>
-  <div style="font-size: 30px;"><a href="https://my-store-c4a5bb.creator-spring.com/">My spring store</div>
+  <div style="font-size: 30px;"><a href="https://my-store-c4a5bb.creator-spring.com/">My spring store</a></div>
   <div style="font-size: 30px;">123</div>
   <div style="font-size: 30px;">123</div>
   <div style="font-size: 30px;">123</div>
