--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div style="font-size: 100px;">JasonTB.com</div>
   <div style="font-size: 30px;"><a href="https://my-store-c4a5bb.creator-spring.com/">My spring store</a></div>
   <div style="font-size: 30px;">My pictures</div>
-  <img src="https://drive.google.com/file/d/16YqijjEIVZZkOm1dU2SYRLPIY6D4CJhf/view?usp=drivesdk">
+  <img src="p-11.jpeg">
   <div style="font-size: 30px;">123</div>
   <div style="font-size: 30px;">123</div>
   <div style="font-size: 30px;"><a href="page.html">123</a></div>
