--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     body {
       font-family: sans-serif;
     }
+    img {
+      max-width: 100%;
+      height: auto;
+    }
   </style>
 </head>
 <body>
