--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div style="font-size: 100px;">JasonTB.com</div>
   <div style="font-size: 30px;"><a href="https://my-store-c4a5bb.creator-spring.com/">My spring store</a></div>
-  <div style="font-size: 30px;"><a href="page.html">My pictures /a>></div>
+  <div style="font-size: 30px;"><a href="page.html">My pictures</div>
   <img src="p-11.jpeg">
   <div style="font-size: 30px;">123</div>
   <div style="font-size: 30px;">123</div>
