--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <div style="font-size: 100px;">JasonTB.com</div>
+  <div style="font-size: 100px; color: blue;">JasonTB.com</div>
   <div style="font-size: 30px;"><a href="https://my-store-c4a5bb.creator-spring.com/">My spring store</a></div>
   <div style="font-size: 30px;"><a href="page.html">My pictures</div>
   <img src="p-11.jpeg">
