--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div style="font-size: 100px;">JasonTB.com</div>
-  <div style="font-size: 30px; color: blue;"><a href="https://my-store-c4a5bb.creator-spring.com/">My spring store</a></div>
+  <div style="font-size: 30px; color: blue;"><a href="https://my-store-c4a5bb.creator-spring.com/" style="color: blue;">My spring store</a></div>
   <div style="font-size: 30px;"><a href="page.html">My pictures</a></div>
   <img src="p-11.jpeg">
   <div style="font-size: 30px;">123</div>
