--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
       max-width: 30%;
       height: auto;
     }
+    .nicer-link {
+      color: blue;
+      text-decoration: none;
+    }
+    nicer-link:hover {
+      color: blue;
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
   <div style="font-size: 100px;">JasonTB.com</div>
-  <div style="font-size: 30px; color: blue;"><a href="https://my-store-c4a5bb.creator-spring.com/" style="color: blue;">My spring store</a></div>
+  <div style="font-size: 30px;"><a href="https://my-store-c4a5bb.creator-spring.com/" class="nicer-link">My spring store</a></div>
   <div style="font-size: 30px;"><a href="page.html">My pictures</a></div>
   <img src="p-11.jpeg">
   <div style="font-size: 30px;">123</div>
