--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       color: blue;
       text-decoration: none;
     }
-    nicer-link:hover {
+    .nicer-link:hover {
       color: blue;
       text-decoration: underline;
     }
