--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       text-decoration: none;
     }
     .nicer-link:hover {
+      color: blue;
       text-decoration: underline;
     }
   </style>
